--- a/src/ClassifiedAds.Monolith/ClassifiedAds.WebAPI/appsettings.json
+++ b/src/ClassifiedAds.Monolith/ClassifiedAds.WebAPI/appsettings.json
@@ -11,6 +11,11 @@
       "Host": "http://localhost:9200",
       "IndexFormat": "classifiedads",
       "MinimumLogEventLevel": "Information"
+    },
+    "EventLog": {
+      "IsEnabled": false,
+      "LogName": "Application",
+      "SourceName": "ClassifiedAds.WebAPI"
     }
   },
   "IdentityServerAuthentication": {
