--- a/src/ClassifiedAds.Monolith/ClassifiedAds.Infrastructure/ClassifiedAds.Infrastructure.csproj
+++ b/src/ClassifiedAds.Monolith/ClassifiedAds.Infrastructure/ClassifiedAds.Infrastructure.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="4.1.1" />
     <PackageReference Include="Microsoft.Azure.Storage.Queue" Version="11.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.EventLog" Version="3.1.0" />
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.1.0" />
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
