[refactor] logging, profiling, security headers

--- a/src/ClassifiedAds.Monolith/ClassifiedAds.WebAPI/ClassifiedAds.WebAPI.csproj
+++ b/src/ClassifiedAds.Monolith/ClassifiedAds.WebAPI/ClassifiedAds.WebAPI.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\ClassifiedAds.Persistence\ClassifiedAds.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Filters\" />
+  </ItemGroup>
+
 </Project>
