--- a/src/ClassifiedAds.Monolith/ClassifiedAds.WebAPI/appsettings.json
+++ b/src/ClassifiedAds.Monolith/ClassifiedAds.WebAPI/appsettings.json
@@ -33,6 +33,11 @@
     "AllowAnyOrigin": false,
     "AllowedOrigins": [ "http://localhost:4200", "http://localhost:3000", "http://localhost:8080" ]
   },
+  "SecurityHeaders": {
+    "Cache-Control": "no-cache, no-store, must-revalidate",
+    "Pragma": "no-cache",
+    "Expires": "0"
+  },
   "MetricsOptions": {
     "DefaultContextLabel": "ClassifiedAds.WebAPI",
     "Enabled": true
