--- a/src/ClassifiedAds.Monolith/ClassifiedAds.WebMVC/appsettings.json
+++ b/src/ClassifiedAds.Monolith/ClassifiedAds.WebMVC/appsettings.json
@@ -86,5 +86,16 @@
       "QueueName_FileUploaded": "classifiedadds_fileuploaded",
       "QueueName_FileDeleted": "classifiedadds_filedeleted"
     }
+  },
+  "SecurityHeaders": {
+    "Content-Security-Policy": "form-action 'self'; frame-ancestors 'none'",
+    "Feature-Policy": "camera 'none'",
+    "Referrer-Policy": "strict-origin-when-cross-origin",
+    "X-Content-Type-Options": "nosniff",
+    "X-Frame-Options": "DENY",
+    "X-XSS-Protection": "1; mode=block",
+    "Cache-Control": "no-cache, no-store, must-revalidate",
+    "Pragma": "no-cache",
+    "Expires": "0"
   }
 }
